@@ -1,5 +1,10 @@
 2010-02-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
+	* Add FiltersToolbox/scinrrd_intersect_plane.m:
+
+	- SCINRRD_INTERSECT_PLANE  Compute intersection of a plane with an
+	SCI NRRD image volume.
+
 	* Add FiltersToolbox/scinrrd_squeeze.m:
 
 	- SCINRRD_SQUEEZE Remove dummy dimension and convert data to
